word-wrap issue modified

--- a/templates/stylus/main.styl
+++ b/templates/stylus/main.styl
@@ -20,6 +20,7 @@ body,html
   padding 0.5em
   font-size 15px
   font-weight bold
+  word-break break-all
   float left
 
 .clear-left
